# Similarius

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: mypy.yml
similarius/: __init__.py  similarius.py
