[tool.poetry]
name = "similarius"
version = "0.0.1"
description = "Compare web page and evaluate the level of similarity."
authors = [
	"David Cruciani <david.cruciani@securitymadein.lu>"
]
maintainers = [
	"Alexandre Dulaunoy <a@foo.be>",
	"Aurelien Thirion (terrtia) <aurelien.thirion@circl.lu>"
]
license = "BSD-2-Clause"
repository = "https://github.com/ail-project/Similarius"

readme = "README.md"

keywords = [
	"web similarity",
	"web comparaison"
]


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
scikit-learn = "^1.2.0"
beautifulsoup4 = "^4.11.1"
nltk = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
