[tool.poetry]
name = "similarius"
version = "0.0.1"
description = "Compare web page and evaluate the level of similarity."
authors = [
	"David Cruciani <david.cruciani@securitymadein.lu>"
]
maintainers = [
	"Alexandre Dulaunoy <a@foo.be>",
	"Aurelien Thirion (terrtia) <aurelien.thirion@circl.lu>"
]
license = "BSD-2-Clause"
repository = "https://github.com/ail-project/Similarius"

readme = "README.md"

keywords = [
	"web similarity",
	"web comparaison"
]

[tool.poetry.scripts]
similarius = 'similarius:main'

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
scikit-learn = "^1.2.0"
beautifulsoup4 = "^4.11.1"
nltk = "^3.8.1"
lxml = ">=4.9.2,<6.0.0"

[tool.poetry.group.dev.dependencies]
mypy = ">=0.991,<1.11"
types-requests = "^2.28.11.7"
types-urllib3 = "^1.26.25.4"
types-beautifulsoup4 = "^4.11.6.2"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
